[package]
name = "chiragagg5k-openruntimes-types-for-rust"
version = "1.0.0"
edition = "2021"
rust-version = "1.83"
authors = ["Open Runtimes <team@openruntimes.io>"]
description = "Types for Rust Open Runtime (personal mirror until official open-runtimes/types-for-rust exists)"
license = "MIT"
repository = "https://github.com/ChiragAgg5k/types-for-rust"
keywords = ["openruntimes", "serverless", "runtime"]
categories = ["web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[lib]
name = "openruntimes"
path = "src/lib.rs"
